2008-04-28  Sven Neumann  <sven@gimp.org>

	* app/display/gimpscalecombobox.c: keep the current scale value,
	beep and reset the entry when the user input cannot be parsed.
	Also changed the input parser to interpret a single number as a
	percentage.

2008-04-28  Joao S. O. Bueno  <gwidion@mpc.com.br>

	* app/pdb/drawable-transform-cmds.c
	* app/pdb/vectors-cmds.c: regenerated

2008-04-28  Sven Neumann  <sven@gimp.org>

	* app/display/gimpscalecombobox.[ch]: derive from GtkComboBoxEntry.
	Needs some more work with respect to input validation and focus
	handling...

2008-04-28  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpwindow.[ch]: added GimpWindow class and moved
	key-press-event handler from GimpDock to this class.

	* app/widgets/gimpdock.[ch]:
	* app/display/gimpdisplayshell.[ch]: derive from GimpWindow.

2008-04-28  Sven Neumann  <sven@gimp.org>

	* app/base/hue-saturation.c (hue_saturation): applied patch from
	Michael Deal that fixes use of the overlap option (bug #527085).

2008-04-28  Sven Neumann  <sven@gimp.org>

	* menus/image-menu.xml.in: removed GEGL tool from the Colors menu
	and also moved it out of the color tools menu.

2008-04-26  João S. O. Bueno  <gwidion@mpc.com.br>

	* AUTHORS
	* authors.xml
	* tools/pdb/stddefs.pdb: Fix my name back to single
	  name in most important files.

2008-04-26  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpgegltool.c: clean up last commit.

2008-04-26  Martin Nordholts  <martinn@svn.gnome.org>

	* plug-ins/flame/libifs.c: Applied patch from Aurimas Juška. Use
	the standard rand() instead of random().

2008-04-26  Øyvind Kolås  <pippin@gimp.org>

	* app/tools/gimpgegltool.c: (gimp_get_subtype_classes),
	(gimp_gegl_tool_compare_operation_names), (gimp_get_geglopclasses),
	(gimp_gegl_tool_dialog): made the GEGL tool only show ops from
	relevant categories, the list of relevant categories is hard coded
	for now.
