@@ -1,3 +1,7 @@
+2008-04-29  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpwindow.c (gimp_window_key_press_event): formatting.
+
 2008-04-28  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpscalecombobox.c: keep the current scale value,
